--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,8 +1,8 @@
 #-------------------------------
 # General Site Settings
-title: Zolan
+title: 方块动力实验室 沙盒游戏与虚拟社会研究中心
 logo: logo.svg # You can add own logo.
-description: Zolan is modern minimal theme for Jekyll
+description: 方块动力实验室 沙盒游戏与虚拟社会研究中心
 
 
 #-------------------------------
